# div.cpp.base.pbni-extension-template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
.github/workflows/: autorelease.yml  build-release.yml  build.yml
src/: README.md  version.rc
